Current mesa/virgl results in a invalid read error
Running ./deqp-gles31 -n dEQP-GLES31.functional.ssbo.layout.random.all_shared_buffer.48
via vtest results in invalid memory access:
Invalid read of size 4
==30683== at 0x4A7FAF6: vrend_launch_grid (vrend_renderer.c:4603)
==30683== by 0x4A65F91: vrend_decode_launch_grid (vrend_decode.c:1266)
==30683== by 0x4A65F91: vrend_decode_block (vrend_decode.c:1606)
==30683== by 0x10BA10: vtest_submit_cmd (vtest_renderer.c:562)
==30683== by 0x10AE0E: vtest_main_run_renderer.constprop.0 (vtest_server.c:424)
==30683== by 0x10A87F: main (vtest_server.c:132)
==30683== Address 0x70 is not stack'd, malloc'd or (recently) free'd